# dmx-plugins

./: .gitignore  README.md
plugins/custom_functions/: CMakeLists.txt
plugins/custom_functions/HexFunctions/: CMakeLists.txt  HexFunctions.cpp
plugins/custom_functions/HexFunctions/include/: HexUtil.h
plugins/custom_functions/HexFunctions/src/: HexFunctions.cpp  HexUtil.cpp
plugins/custom_functions/StringFunctions/: CMakeLists.txt
plugins/custom_functions/StringFunctions/include/: StringUtil.h
plugins/custom_functions/StringFunctions/src/: StringFunctions.cpp  StringUtil.cpp
plugins/custom_functions/include/: dmx_custom_functions.h
